--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     favicon = ""
     opengraphImage = ""
     twitter = "bryan_bugyi"
-    linkedin = "bryanbugyi"
+    linkedin = "bryan-bugyi"
     github = "bbugyi200"
     facebook = ""
     email = "bryanbugyi34@gmail.com"
