--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ disqusShortname = "bryanbugyi"
 disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use "tag" and "category" taxonomies
 
 [Params]
-    tagline = "Living life one bit at a time."
+    tagline = "You can have the project: Done On Time. Done On Budget. Done Properly - Pick two."
     author = "Bryan Bugyi"
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
     logoBig = ""
