--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ disqusShortname = "bryanbugyi"
 disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use "tag" and "category" taxonomies
 
 [Params]
-    tagline = ""So much complexity in software comes from trying to make one thing do two things." – Ryan Singer"
+    tagline = '"A primary cause of complexity is that software vendors uncritically adopt almost any feature that users want."- Niklaus Wirth'
     author = "Bryan Bugyi"
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
     logoBig = ""
