--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ disqusShortname = "bryanbugyi"
 disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use "tag" and "category" taxonomies
 
 [Params]
-    tagline = """“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler"""
+    tagline = """"One of the best programming skills you can have is knowing when to walk away for awhile." - Oscar Godson"""
     author = "Bryan Bugyi"
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
     logoBig = "/img/BB-256.svg"
