Mod: proofread blog post

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
     logoBig = "/img/BB-256.svg"
     logoSmall = "/img/BB-64.svg"
-    favicon = ""
+    favicon = "/img/BB-64.svg"
     opengraphImage = "/img/BB-128.svg"
     twitter = "bryan_bugyi"
     linkedin = "bryan-bugyi-a3650763"
