--- a/config.toml
+++ b/config.toml
@@ -26,8 +26,8 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     email = "bryanbugyi34@gmail.com"
     googleTagManager = ""
     highlightJS = true
-    copyright = false
-    credit = false
+    copyright = true
+    credit = true
     customCSS = false
     cacheBustCSS = false
     cacheBustJS = false
