--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ tags = ["portfolio", "web design", "blog"]
 config = "config.toml"
 theme = "osprey"
 canonifyURLS = true
-googleAnalytics = ""
+googleAnalytics = "UA-129349538-1"
 disqusShortname = "bryanbugyi"
 disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use "tag" and "category" taxonomies
 
@@ -15,10 +15,10 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     tagline = """“To iterate is human, to recurse divine.” - L. Peter Deutsch"""
     author = "Bryan Bugyi"
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
-    logoBig = "/img/BB-256.svg"
-    logoSmall = "/img/BB-64.svg"
-    favicon = "/img/BB-64.svg"
-    opengraphImage = "/img/BB-128.svg"
+    logoBig = "/images/BB-256.svg"
+    logoSmall = "/images/BB-64.svg"
+    favicon = "favicon.ico"
+    opengraphImage = "/images/BB-128.svg"
     twitter = "bryan_bugyi"
     linkedin = "bryan-bugyi-a3650763"
     github = "bbugyi200"
@@ -28,7 +28,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     highlightJS = true
     copyright = true
     credit = true
-    customCSS = false
+    customCSS = true
     cacheBustCSS = false
     cacheBustJS = false
     ajaxFormspree = true
