Update Website Content

--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,8 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
     email = "bryanbugyi34@gmail.com"
     googleTagManager = ""
     highlightJS = true
-    copyright = true
-    credit = true
+    copyright = false
+    credit = false
     customCSS = true
     cacheBustCSS = false
     cacheBustJS = false
