--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ canonifyURLS = true
 googleAnalytics = "UA-129349538-1"
 enableEmoji = true
 disqusShortname = "bryanbugyi"
+disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use "tag" and "category" taxonomies
 
 [Params]
     tagline = """"Measuring programming progress by lines of code is like measuring aircraft building progress by weight." - Bill Gates"""
