--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
 [Params]
     tagline = """"Measuring programming progress by lines of code is like measuring aircraft building progress by weight." - Bill Gates"""
     author = "Bryan Bugyi"
+    tags = ["vim", "commandline"]
     description = "Software Engineer in training. Currently studying Computer Science and Mathematics at Rutgers University. I am on track to graduate in the Spring of 2018."
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
