--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "A Tech Blog by Bryan Bugyi"
 newContentEditor = "vim"
 pygmentsUseClasses = true
 pygmentsCodefencesGuessSyntax = true
-tags = ["vim", "commandline"]
+categories = ["vim", "commandline"]
 config = "config.toml"
 theme = "osprey"
 canonifyURLS = true
