--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """"The best thing about a boolean is even if you are wrong, you are only off by a bit.""""
+    tagline = """"In programming, the hard part isn't solving problems, but deciding what problems to solve." - Paul Graham"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
