--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """“I think Microsoft named .Net so it wouldn’t show up in a Unix directory listing.” - Oktal"""
+    tagline = """"One of the best programming skills you can have is knowing when to walk away for awhile." - Oscar Godson"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
