--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """"The trick is to fix the problem you have, rather than the problem you want." - Bram Cohen"""
+    tagline = """“Before software can be reusable it first has to be usable.” – Ralph Johnson"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
