--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """“Before software can be reusable it first has to be usable.” – Ralph Johnson"""
+    tagline = """"Programming is being ten minutes away from being done for the rest of your life." - Jon Maddox"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
