--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """\"Programming is like pinball. The reward for doing it is the opportunity of doing it again.\""""
+    tagline = """"The trick is to fix the problem you have, rather than the problem you want." - Bram Cohen"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
