--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ title = "A Tech Blog by Bryan Bugyi"
     logoBig = "/images/BB-256.svg"
     logoSmall = "/images/BB-64.svg"
     opengraphImage = "/images/BB-128.svg"
-    tagline = """“Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” – Martin Fowler"""
+    tagline = """“To iterate is human, to recurse divine.” - L. Peter Deutsch"""
     twitter = "bryan_bugyi"
 
 [[menu.main]]
