--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ theme = "osprey"
 title = "A Tech Blog by Bryan Bugyi"
 
 [Params]
-    ajaxFormspree = true
+    ajaxFormspree = false
     author = "Bryan Bugyi"
     cacheBustCSS = false
     cacheBustJS = false
